--- a/section02/index.html
+++ b/section02/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blockchain: Section 1</title>
-    <script src="section01Ans.js" defer></script>
+    <title>Blockchain: Section 2</title>
+    <script src="section02Ans01.js" defer></script>
+    <!-- <script src="section02Ans02.js" defer></script> -->
 </head>
 
 <body>
-    <div>Inspect F12 the output on Console Log</div>
+    <div>Inspect F12 the output on Developer Tool Console</div>
 </body>
 
 </html>
