--- a/section02/index.html
+++ b/section02/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blockchain: Section 2</title>
+    <script>var exports = {};</script>
     <script src="section02Ans01.js" defer></script>
     <!-- <script src="section02Ans02.js" defer></script> -->
 </head>
